- diskdrake
  o fix 1.9TB displayed as 1TB
- drakboot -boot
  o update splash when changing framebuffer resolution (#27470)

Version 10.4.135 -  08 June 2007, by Thierry Vignaud

- interactive layer:
  o enable to override default size with Gtk+ frontend
- drakfont:
  o do not misbelieve a font is already installed if substring of
    another font name
  o simplify finding windows fonts
  o finding windows fonts is now really case insensitive

Version 10.4.134 -  06 June 2007, by Thierry Vignaud

- drakfont:
  o fix crash (#28016)
  o fix enumerating fonts on old windows (#28016)

Version 10.4.133 -  05 June 2007, by Thierry Vignaud

- bootloader-config:
  o handle kernel-xen-uptodate (#31154)
- drakfont: fix crash

Version 10.4.132 -  05 June 2007, by Thierry Vignaud

- fix some UTF8 issue (#31067) (notably drakbug)
- hw support:
  o handle snd-cs5530 driver
- progress bar wait_message: ensure it doesn't go crazy when asked to update
  with the same fraction (eg #30090)
- diskdrake:
  o when formatting ntfs don't zero partition (#30928)
- drakfont:
  o do see fuse-mounted or ntfs-3g windows partitions (ffixxx, #28016)
  o try different cases on windows partitions (based on ffixxx suggestion, #28016)
- drakhelp:
  o fix .mozilla dir as root when it doesn't exists (#29775)
- draksec:
  o make the help dialog clearer about default values (#24159)
- harddrake GUI:
  o fix USB UPS detection logic (whitelist supported hardware)
- harddrake service:
  o drop support for kernel-2.4.x

Version 10.4.131 - 18 May 2007, by Thierry Vignaud

- bug fix for rpmdrake: pkgs.pm file was missing
- diskdrake:
  o fix resizing's failures due to udev race when writing the
    partition table

Version 10.4.130 - 16 May 2007, by Thierry Vignaud

- bootloader-config: do create /boot/initrd-xxx.img when there is no
  bootloader (#30771 comment #21)
- create udev nodes configuration file in /etc/udev/devices.d/ instead
  of conf.d (used for modem and mouse)
- diskdrake: