@@ -2,6 +2,8 @@
   o fix 1.9TB displayed as 1TB
 - drakboot -boot
   o update splash when changing framebuffer resolution (#27470)
+- harddrake UI:
+  o add a class for biometric sensors (fingerprint for now) (#31182)
 
 Version 10.4.135 -  08 June 2007, by Thierry Vignaud
 
